// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitGrid basic isLoading snapshot render 1`] = `
<ul
  className="sc-htpNat cBkXxw spinner spinning"
>
  <li
    className="sc-bdVaJa hSqHBb"
  >
    fake_singular1
    <aside>
      fake_plural1
    </aside>
  </li>
  <li
    className="sc-bdVaJa hSqHBb"
  >
    fake_singular2
    <aside>
      fake_plural2
    </aside>
  </li>
</ul>
`;

exports[`UnitGrid basic snapshot render 1`] = `
<ul
  className="sc-htpNat cBkXxw spinner"
>
  <li
    className="sc-bdVaJa hSqHBb"
  >
    fake_singular1
    <aside>
      fake_plural1
    </aside>
  </li>
  <li
    className="sc-bdVaJa hSqHBb"
  >
    fake_singular2
    <aside>
      fake_plural2
    </aside>
  </li>
</ul>
`;
